Add DETR entry to overview doc
Signed-off-by: Issam Arabi <issam@cs.toronto.edu>

--- a/docs/source/bettertransformer/overview.mdx
+++ b/docs/source/bettertransformer/overview.mdx
@@ -46,8 +46,9 @@ The list of supported model below:
 - [CLIP](https://arxiv.org/abs/2103.00020)
 - [CodeGen](https://arxiv.org/abs/2203.13474)
 - [Data2VecText](https://arxiv.org/abs/2202.03555)
-- [DistilBert](https://arxiv.org/abs/1910.01108)
 - [DeiT](https://arxiv.org/abs/2012.12877)
+- [DERT] (https://arxiv.org/abs/2005.12872)
+- [DistilBert](https://arxiv.org/abs/1910.01108)
 - [Electra](https://arxiv.org/abs/2003.10555)
 - [Ernie](https://arxiv.org/abs/1904.09223)
 - [FSMT](https://arxiv.org/abs/1907.06616)
