--- a/docs/source/onnxruntime/usage_guides/pipelines.mdx
+++ b/docs/source/onnxruntime/usage_guides/pipelines.mdx
@@ -57,8 +57,7 @@ There are tags on the Model Hub that allow you to filter for a model you'd like 
 
 To be able to load the model with the ONNX Runtime backend, the export to ONNX needs to be supported for the considered architecture.
 
-You can check the list of supported architectures
-[here](/exporters/onnx/overview#overview).
+You can check the list of supported architectures [here](optimum/exporters/onnx/overview#overview).
 
 </Tip>
 
