--- a/docs/source/onnxruntime/usage_guides/amdgpu.mdx
+++ b/docs/source/onnxruntime/usage_guides/amdgpu.mdx
@@ -1,25 +1,26 @@
-# Accelerated inference on AMD GPUs
+# Accelerated inference on AMD GPUs supported by ROCm
 
 By default, ONNX Runtime runs inference on CPU devices. However, it is possible to place supported operations on an AMD Instinct GPU, while leaving any unsupported ones on CPU. In most cases, this allows costly operations to be placed on GPU and significantly accelerate inference.
 
-This guide will show you how to run inference on the `ROCMExecutionProvider` execution provider that ONNX Runtime supports for AMD GPUs:
+Our testing primarily involved AMD Instinct GPUs, and for specific GPU compatibility, refer to the support matrix available at AMD ROCm GPU OS support matrix."
+
+This guide will show you how to run inference on the `ROCMExecutionProvider` execution provider that ONNX Runtime supports for AMD GPUs.
 
 ## Installation
+The following setup installs the ONNX Runtime support with ROCM Execution Provider with ROCm 5.7. 
 
-#### 1. ROCM Installation (V 5.7.X)
-To install ROCM, please follow the [ROCM installation guide](https://rocm.docs.amd.com/en/latest/deploy/linux/index.html).
+#### 1. ROCm Installation
 
-#### 2. Torch Installation with ROCM Support
+To install ROCM 5.7, please follow the [ROCm installation guide](https://rocm.docs.amd.com/en/latest/deploy/linux/index.html).
 
-```bash
-pip3 install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/rocm5.7
-```
+#### 2. PyTorch Installation with ROCm Support
+Optimum ONNX Runtime integration relies on some functionalities of Transformers that require PyTorch. For now, we recommend to use Pytorch compiled against RoCm 5.7, that can be installed following [PyTorch installation guide](https://pytorch.org/get-started/locally/): 
 
-> **Note1:** Exporting with SDPA may encounter issues with torch versions below 2.1.0. To ensure smooth operation, consider upgrading to torch 2.1.0 or newer.
+<Tip>
+For docker installation, the following base image is recommended: `rocm/pytorch:rocm5.7_ubuntu22.04_py3.10_pytorch_2.0.1`
+</Tip>
 
-> **Note2:** For docker installation, the following base image is recommended: rocm/pytorch:rocm5.7_ubuntu22.04_py3.10_pytorch_2.0.1
-
-### 3. ONNXRuntime Installation with ROCM Execution Provider
+### 3. ONNX Runtime installation with ROCm Execution Provider
 
 ```bash
 # pre-requisites
@@ -36,9 +37,11 @@ cd onnxruntime
 pip install build/Linux/Release/dist/*
 ```
 
-> **Note:** To avoid conflicts between `onnxruntime` and `onnxruntime-rocm`, make sure the package `onnxruntime` is not installed by running `pip uninstall onnxruntime` prior to installing `onnxruntime-rocm`.
+<Tip>
+To avoid conflicts between `onnxruntime` and `onnxruntime-rocm`, make sure the package `onnxruntime` is not installed by running `pip uninstall onnxruntime` prior to installing `onnxruntime-rocm`.
+</Tip>
 
-### Checking the ROCM installation is successful
+### Checking the ROCm installation is successful
 
 Before going further, run the following sample code to check whether the install was successful:
 
@@ -67,7 +70,7 @@ ValueError: Asked to use ROCMExecutionProvider as an ONNX Runtime execution prov
 
 then something is wrong with the ROCM or ONNX Runtime installation.
 
-### Use ROCM execution provider with ORT models
+### Use ROCM Execution Provider with ORT models
 
 For ORT models, the use is straightforward. Simply specify the `provider` argument in the `ORTModel.from_pretrained()` method. Here's an example:
 
