--- a/docs/source/onnxruntime/usage_guides/amdgpu.mdx
+++ b/docs/source/onnxruntime/usage_guides/amdgpu.mdx
@@ -9,11 +9,11 @@ This guide will show you how to run inference on the `ROCMExecutionProvider` exe
 ## Installation
 The following setup installs the ONNX Runtime support with ROCM Execution Provider with ROCm 5.7. 
 
-#### ROCm Installation
+#### 1 ROCm Installation
 
 Refer to the [ROCm installation guide](https://rocm.docs.amd.com/en/latest/deploy/linux/index.html) to install ROCm 5.7.
 
-#### Installing `onnxruntime-rocm`
+#### 2 Installing `onnxruntime-rocm`
 
 Utilize the provided [Dockerfile](https://github.com/huggingface/optimum-amd/blob/main/docker/onnx-runtime-amd-gpu/Dockerfile) example or perform a local installation from the source since pip wheels are currently unavailable.
 
