--- a/docs/source/onnxruntime/usage_guides/amdgpu.mdx
+++ b/docs/source/onnxruntime/usage_guides/amdgpu.mdx
@@ -15,7 +15,7 @@ Refer to the [ROCm installation guide](https://rocm.docs.amd.com/en/latest/deplo
 
 #### 2 Installing `onnxruntime-rocm`
 
-Utilize the provided [Dockerfile](https://github.com/huggingface/optimum-amd/blob/main/docker/onnx-runtime-amd-gpu/Dockerfile) example or perform a local installation from the source since pip wheels are currently unavailable.
+Please use the provided [Dockerfile](https://github.com/huggingface/optimum-amd/blob/main/docker/onnx-runtime-amd-gpu/Dockerfile) example or do a local installation from source since pip wheels are currently unavailable.
 
 **Docker Installation:**
 
