--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -104,8 +104,65 @@ Supported architectures:
 - Yolos
 
 Supported architectures (Timm):
-- Resnext50-32x4d
-- Resnext50d-32x4d
-- Resnext101-32x4d
-- Resnext101-32x8d
-- Resnext101-64x4d
+- Adversarial Inception v3
+- AdvProp (EfficientNet)
+- Big Transfer (BiT)
+- CSP-DarkNet
+- CSP-ResNet
+- CSP-ResNeXt
+- DenseNet
+- Deep Layer Aggregation
+- Dual Path Network (DPN)
+- ECA-ResNet
+- EfficientNet
+- EfficientNet (Knapsack Pruned)
+- Ensemble Adversarial Inception ResNet v2
+- FBNet
+- (Gluon) Inception v3
+- (Gluon) ResNet
+- (Gluon) ResNeXt
+- (Gluon) SENet
+- (Gluon) SE-ResNeXt
+- (Gluon) Xception
+- HRNet
+- Instagram ResNeXt WSL
+- Inception ResNet v2
+- Inception v3
+- Inception v4
+- (Legacy) SE-ResNet
+- (Legacy) SE-ResNeXt
+- (Legacy) SENet
+- MixNet
+- MnasNet
+- MobileNet v2
+- MobileNet v3
+- NASNet
+- Noisy Student (EfficientNet)
+- PNASNet
+- RegNetX
+- RegNetY
+- Res2Net
+- Res2NeXt
+- ResNeSt
+- ResNet
+- ResNet-D
+- ResNeXt
+- RexNet
+- SE-ResNet
+- SelecSLS
+- SE-ResNeXt
+- SK-ResNet
+- SK-ResNeXt
+- SPNASNet
+- SSL ResNet
+- SWSL ResNet
+- SWSL ResNeXt
+- (Tensorflow) EfficientNet
+- (Tensorflow) EfficientNet CondConv
+- (Tensorflow) EfficientNet Lite
+- (Tensorflow) Inception v3
+- (Tensorflow) MixNet
+- (Tensorflow) MobileNet v3
+- TResNet
+- Wide ResNet
+- Xception
