--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -39,6 +39,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Deit
 - Detr
 - DistilBert
+- DiT
 - Donut-Swin
 - Electra
 - Encoder Decoder
