Add ONNX export for table-transformer

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -91,6 +91,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - SqueezeBert
 - Swin
 - T5
+- Table Transformer
 - TROCR
 - UniSpeech
 - UniSpeech SAT
