Add onnx export support for CLIPSeg models

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -27,6 +27,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Bloom
 - Camembert
 - CLIP
+- CLIPSeg
 - CodeGen
 - ConvBert
 - ConvNext
