[wip] add oneformer ONNX export

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -71,6 +71,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - MPNet
 - MT5
 - Nystromformer
+- OneFormer
 - OWL-ViT
 - Pegasus
 - Perceiver
