--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -121,6 +121,7 @@ Supported architectures from [🤗 Timm](https://huggingface.co/docs/timm/index)
 - EfficientNet
 - EfficientNet (Knapsack Pruned)
 - Ensemble Adversarial Inception ResNet v2
+- ESE-VoVNet (Partial support with static shapes)
 - FBNet
 - (Gluon) Inception v3
 - (Gluon) ResNet
