Trigger PR doc build for real?

--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -12,6 +12,8 @@ specific language governing permissions and limitations under the License.
 
 # 🤗 Optimum
 
+TEST
+
 🤗 Optimum is an extension of [Transformers](https://huggingface.co/docs/transformers) that provides a set of performance optimization tools to train and run models on targeted hardware with maximum efficiency.
 
 The AI ecosystem evolves quickly, and more and more specialized hardware along with their own optimizations are emerging every day.
