Add wav2vec2-bert onnx export

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -98,6 +98,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Vision Encoder Decoder
 - Vit
 - Wav2Vec2
+- Wav2Vec2 Bert
 - Wav2Vec2 Conformer
 - WavLM
 - Whisper
