Add comment about hardware-agnostic libraries

--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -53,6 +53,9 @@ The packages below enable you to get the best of the 🤗 Hugging Face ecosystem
   </div>
 </div>
 
+> [!TIP]
+> Some packages provide hardware-agnostic features (e.g. INC interface in Optimum Intel).
+
 
 ## Open-source integrations
 
