add doc and test cases for ernie model

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -42,6 +42,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Donut-Swin
 - Electra
 - Encoder Decoder
+- Ernie
 - ESM
 - Falcon
 - Flaubert
