--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -104,6 +104,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - XLM
 - XLM-Roberta
 - Yolos
+- Qwen2(Qwen1.5)
 
 Supported architectures from [🤗 Diffusers](https://huggingface.co/docs/diffusers/index):
 - Stable Diffusion
