--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -77,6 +77,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Phi
 - Pix2Struct
 - PoolFormer
+- Qwen2(Qwen1.5)
 - RegNet
 - ResNet
 - Roberta
