--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -62,6 +62,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Llama
 - M2-M100
 - Marian
+- MarkupLM
 - MBart
 - Mistral
 - MobileBert
