Add mobilevitv2 onnx export

--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -67,6 +67,7 @@ Supported architectures from [🤗 Transformers](https://huggingface.co/docs/tra
 - Mistral
 - MobileBert
 - MobileVit
+- MobileVitV2
 - MobileNet v1
 - MobileNet v2
 - MPNet
